[Refactor] @LoginMember 어노테이션 기반으로 회원 인증 리팩토링
기존 LoginMember 클래스를 어노테이션으로 변경하고 관련 로직을 수정하여 코드의 일관성과 가독성을 향상시켰습니다. 또한 예약 및 대기 관련 로직에서 Member 객체를 직접 사용하도록 변경하여 중복 코드를 제거하고 효율성을 높였습니다.